[metadata]
name = vistr-py
version = 0.0.1
description = python binding of visstr, which is a string visualizer written in JS.
keywords = visualization, string, stringology
author = kg86
license = MIT

[options]
packages = visstr
package_dir =
  = lib
install_requires =
  ipython
python_requires = >= 3.6.1
include_package_data = True

[options.package_data]
* = *.js
